--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ img {
   width: 100%;
   max-width: 500px;
   border-radius: 50%;
-  box-shadow: 10px 10px 30px rgb(255, 255, 255);
+  box-shadow: -15px -5px 15px rgb(255, 255, 255), 15px 5px 15px rgb(0, 0, 0);
 }
 
 #login {
